--- a/assets/style.css
+++ b/assets/style.css
@@ -1,48 +1,54 @@
-#biden {
-    float: right;
-    margin-right: 70px;
-    margin-top: 30px;
-    width: 80%;
-    height: 80%;
-}
-
-#biden-txt {
-    text-align: center;
-    font-size: x-large;
-}
-
-#biden-head {
-    text-align: center;
-}
-
-#democratic-background {
-    background-image: url(/img/democratic.jpg);
-    background-position: center;
-    background-size: cover;
-    opacity: 100%;
-    background-repeat: no-repeat;
-    /* position: fixed; */
-}
-
-#republican-backgroud {
-    background-image: url(/img/republican.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 25%;
-    margin: 80px;
-}
-
-#trump {
-    float: right;
-    margin: 20px;
-    height: 80%;
-}
-
-#trump-txt {
-    text-align: center;
-    font-size: x-large;
-}
-
-#trump-head {
-    text-align: center;
-}
+    #Header {
+        text-align: center;
+        border: 10px solid black;
+        padding: 30px;
+        font-size: xx-large;
+    }
+    
+    #biden {
+        float: left;
+        margin-right: 70px;
+        margin-top: 30px;
+        height: 50%;
+    }
+    
+    #biden-txt {
+        text-align: center;
+        font-size: x-large;
+    }
+    
+    #biden-head {
+        text-align: center;
+    }
+    
+    #democratic-background {
+        background-image: url("/assets/img/democratic.jpg");
+        background-position: center;
+        background-size: 800px;
+        background-attachment: local;
+        background-repeat: no-repeat;
+    }
+    
+    #republican-background {
+        background-image: url("/assets/img/republican3.jpg");
+        background-position: center;
+        background-size: 800px;
+        background-attachment: local;
+        background-repeat: no-repeat;
+    }
+    
+    #trump {
+        float: right;
+        margin: 20px;
+        height: 50%;
+    }
+    
+    #trump-txt {
+        text-align: center;
+        float: left;
+        font-size: x-large;
+    }
+    
+    #trump-head {
+        text-align: center;
+    }
