--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,13 +21,13 @@
 }
 
 #democratic-background {
-    background-image: url(/assets/img/democratic.jpg);
+    background-image: url(../img/democratic.jpg);
     background-position: center;
     background-repeat: no-repeat;
 }
 
 #republican-background {
-    background-image: url(/assets/img/republicanlogo3.png);
+    background-image: url(../img/republicanlogo3.png);
     background-position: center;
     background-size: 1400;
     background-repeat: no-repeat;
@@ -45,4 +45,37 @@
 
 #trump-head {
     text-align: center;
+}
+
+#articlesDem {
+    font-size: x-large;
+}
+
+.info {
+    border-style: solid;
+    padding: 20px;
+    margin: 20px;
+    background-color: white;
+}
+
+.knowCandidate {
+    text-align: center;
+    color: white;
+}
+
+#bodyDem {
+    background-color: #0000ff;
+}
+
+.twitter-timeline {
+    margin-left: 20px;
+}
+
+.slides {
+    border-style: solid;
+    border-color: white;
+}
+
+#bodyRep {
+    background-color: #ff0803;
 }
